webb/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: chinglew27/ipautsons-frontend:v1.5
        name: ipautsons
        volumeMounts:
              - name: nfs-share
                mountPath: /ipautsons
        command: ["yarn", "run", "serve"]
      volumes:
      - name: nfs-share
        persistentVolumeClaim: 
          claimName: example
